# crispy-funicular-svgs

./: README.md  dsl.cabal  run.sh  stack.yaml
app/: Colours.hs  Interpreter.hs  Main.hs  Shapes.hs  Stylesheet.hs  Transforms.hs  index.html
