name: dsl
version: 0.1.0.0
synopsis: A simple shape DSL interpreter
description: Please see README.md
homepage: https://github.com/TomasBarry/crispy-funicular-svgs#readme
license: MIT
license-file: LICENSE
author: Tomas Barry
maintainer: tomas.barry@hotmail.com
copyright: 2016 Tomas Barry
category: Web
build-type: Simple
cabal-version:       >=1.10

executable dsl
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules: Shapes, Stylesheet, Colours, Interpreter, Transforms
  build-depends:  base
                     , blaze-html
                     , blaze-svg
                     , scotty
                     , text
                     , colour

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/TomasBarry/crispy-funicular-svgs
